tests/fixtures/invalid/bytes_sub_bool.py
# Cannot subtract Bytes and Bool
x: bytes = b"hello" - True
